@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 19:04:10 brook Exp $
+
+R_PKGNAME=	xopen
+R_PKGVER=	1.0.0
+CATEGORIES=	sysutils
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Open system files, 'URLs', anything
+LICENSE=	mit
+
+DEPENDS+=	R-processx>=3.4.1:../../sysutils/R-processx
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
